finish ghost theme for nuxt

--- a/layout/casper/header.ejs
+++ b/layout/casper/header.ejs
@@ -1,9 +1,24 @@
-<header class="site-head" <% if (theme.cover) { %> style="background-image: url(<%- theme.cover %>)" <% } %>>
-    <div class="vertical">
+<header class="site-head" <% if (page.banner) { %> style="background-image: url(<%- page.banner %>)" <% } else if(theme.cover) { %> style="background-image: url(<%- theme.cover %>)" <% } %>>
+
+    <% console.log(page.path) %>
+
+    
+   
+   
+    <div class="navbar <% if(page.path=='index.html') {%>home <%}else{%>post-page<%}%>">
         <div class="site-head-content inner">
-            <% if (theme.logo) { %> <a class="blog-logo" href="<%- config.root %>"><img src="<%- theme.logo %>" alt="Blog Logo"/></a> <% } %>
+            <% if (theme.logo) { %> <a class="blog-logo" href="<%- config.root %>"><img src="<%- theme.logo %>" alt="Blog Logo"/></a> <% }else{ %>
             <h1 class="blog-title"><%- config.title %></h1>
-            <h2 class="blog-description"><%- config.subtitle %></h2>
+            <% } %>
+            <div class="nav-menus">
+                <% site.categories.each(function(category){%>
+            <div class="menu"><%= category.name %></div>
+            <%})%>
+            </div>
+            
+            
         </div>
+
     </div>
+    
 </header>
