--- a/layout/casper/post/author.ejs
+++ b/layout/casper/post/author.ejs
@@ -1,4 +1,6 @@
-<section class="author">
-    <h4><%- config.author %></h4>
-    <p><%- theme.bio %></p>
+<section class="author ">
+<img src="<%- config.avatar %>">
+<div class="intro"><h4><%- config.author %></h4>
+    <p><%- config.bio %></p></div>
+    
 </section>
