--- a/layout/casper/post/share.ejs
+++ b/layout/casper/post/share.ejs
@@ -1,6 +1,7 @@
 <section class="share">
-    <h4>Share this post</h4>
-    <a class="icon-twitter" href="http://twitter.com/share?url=<%- permalink %>"
+    <div class='share-title'>Share this post</div>
+    <div class="share-functions">
+       <a class="icon-twitter" href="http://twitter.com/share?url=<%- permalink %>"
        onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
         <span class="hidden">Twitter</span>
     </a>
@@ -12,4 +13,6 @@
        onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
         <span class="hidden">Google+</span>
     </a>
+    </div>
+    
 </section>
