--- a/source/css/screen.css
+++ b/source/css/screen.css
@@ -434,11 +434,11 @@ margin on the iframe, cause it breaks stuff. */
     align-items: center;
 
 }
-.navbar.home .blog-logo,.navbar.home .blog-logo{
+.navbar.home .blog-logo,.navbar.home .blog-title{
 text-align: center;
 display: block;
 width: 100%;
-font-size: 44px;
+font-size: 4rem;
 }
 .blog-logo img {
         height: 44px;
@@ -486,6 +486,7 @@ font-size: 44px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     text-shadow: 0 1px 6px rgba(0,0,0,0.1);
+    font-size:28px;
 }
 
 .blog-description {
@@ -1751,7 +1752,7 @@ pre .chunk {
     }
 
     .blog-title {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 
     .blog-description {
