--- a/source/css/screen.css
+++ b/source/css/screen.css
@@ -232,7 +232,9 @@ hr {
     margin: 3.2em 0;
     padding: 0;
 }
-
+a{
+    color: white;
+}
 blockquote {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -433,6 +435,10 @@ margin on the iframe, cause it breaks stuff. */
     display: flex;
     align-items: center;
 
+}
+.navbar.home .nav-menus .menu{
+    margin: unset;
+    margin-right: 40px;
 }
 .navbar.home .blog-logo,.navbar.home .blog-title{
 text-align: center;
@@ -1062,6 +1068,9 @@ created within the Ghost editor. The main content handles
 headings, text, images and lists. We deal with cards lower down. */
 
 /* Default vertical spacing */
+.gh-content img{
+    width:80%;
+}
 .gh-content p{
     margin:unset;
  margin-bottom:3.2rem;
@@ -1208,6 +1217,9 @@ is the very first element in the post content */
 }
 
 @media (max-width: 650px) {
+    .gh-content img{
+        width:100%;
+    }
     .gh-content > blockquote:not([class]),
     .gh-content > ol,
     .gh-content > ul,
